postgres-gw.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: postgres-gw
  namespace: postgres
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: postgres-tcp
      number: 5432
      protocol: TCP
