postgres-vs.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: postgres-vs
  namespace: postgres
spec:
  gateways:
  - postgres-gw
  hosts:
  - '*'
  tcp:
  - match:
    - port: 5432
    route:
    - destination:
        host: postgres-dev-postgresql
        port:
          number: 5432
